src/main/java/com/hermant/parser/antlr/PseudoAssemblerParser.java
// Generated from PseudoAssembler.g4 by ANTLR 4.8

package com.hermant.parser.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PseudoAssemblerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, DC=5, DS=6, EXIT=7, SIN=8, RET=9, LOAD=10, 
		ST=11, JUMP=12, JG=13, JL=14, JE=15, JZ=16, ADD=17, SUB=18, MUL=19, PUSH=20, 
		OUT=21, STRING_TYPE=22, BYTE_TYPE=23, INT_TYPE=24, CHAR_TYPE=25, FLOAT_TYPE=26, 
		STRING=27, CHAR=28, EOL=29, COMMENT=30, LABEL=31, ID=32, WS=33, INT=34, 
		SIGNED_INT=35, FLOAT=36, HEX=37, BIN=38;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_label = 2, RULE_instruction = 3, RULE_no_params_instruction = 4, 
		RULE_reg_mem_or_reg_reg_instruction = 5, RULE_reg_mem_instruction = 6, 
		RULE_reg_or_mem_instruction = 7, RULE_reg_instruction = 8, RULE_mem_instruction = 9, 
		RULE_declaration = 10, RULE_const_declaration = 11, RULE_space_declaration = 12, 
		RULE_string_declaration = 13, RULE_byte_val = 14, RULE_int_val = 15, RULE_float_val = 16, 
		RULE_reg = 17, RULE_mem = 18, RULE_no_params_op_code = 19, RULE_reg_op_code = 20, 
		RULE_mem_op_code = 21, RULE_reg_mem_or_reg_reg_op_code = 22, RULE_reg_or_mem_op_code = 23, 
		RULE_reg_mem_op_code = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "line", "label", "instruction", "no_params_instruction", "reg_mem_or_reg_reg_instruction", 
			"reg_mem_instruction", "reg_or_mem_instruction", "reg_instruction", "mem_instruction", 
			"declaration", "const_declaration", "space_declaration", "string_declaration", 
			"byte_val", "int_val", "float_val", "reg", "mem", "no_params_op_code", 
			"reg_op_code", "mem_op_code", "reg_mem_or_reg_reg_op_code", "reg_or_mem_op_code", 
			"reg_mem_op_code"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'*'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "DC", "DS", "EXIT", "SIN", "RET", "LOAD", 
			"ST", "JUMP", "JG", "JL", "JE", "JZ", "ADD", "SUB", "MUL", "PUSH", "OUT", 
			"STRING_TYPE", "BYTE_TYPE", "INT_TYPE", "CHAR_TYPE", "FLOAT_TYPE", "STRING", 
			"CHAR", "EOL", "COMMENT", "LABEL", "ID", "WS", "INT", "SIGNED_INT", "FLOAT", 
			"HEX", "BIN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PseudoAssembler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PseudoAssemblerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PseudoAssemblerParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<TerminalNode> EOL() { return getTokens(PseudoAssemblerParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(PseudoAssemblerParser.EOL, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DC) | (1L << DS) | (1L << EXIT) | (1L << SIN) | (1L << RET) | (1L << LOAD) | (1L << ST) | (1L << JUMP) | (1L << JG) | (1L << JL) | (1L << JE) | (1L << JZ) | (1L << ADD) | (1L << SUB) | (1L << MUL) | (1L << PUSH) | (1L << OUT) | (1L << LABEL))) != 0)) {
				{
				setState(50);
				line();
				}
			}

			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EOL) {
				{
				{
				setState(53);
				match(EOL);
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DC) | (1L << DS) | (1L << EXIT) | (1L << SIN) | (1L << RET) | (1L << LOAD) | (1L << ST) | (1L << JUMP) | (1L << JG) | (1L << JL) | (1L << JE) | (1L << JZ) | (1L << ADD) | (1L << SUB) | (1L << MUL) | (1L << PUSH) | (1L << OUT) | (1L << LABEL))) != 0)) {
					{
					setState(54);
					line();
					}
				}

				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LABEL) {
					{
					{
					setState(64);
					label();
					}
					}
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(70);
				instruction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LABEL) {
					{
					{
					setState(71);
					label();
					}
					}
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(77);
				declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(78);
					label();
					}
					}
					setState(81); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==LABEL );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode LABEL() { return getToken(PseudoAssemblerParser.LABEL, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitLabel(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(LABEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public No_params_instructionContext no_params_instruction() {
			return getRuleContext(No_params_instructionContext.class,0);
		}
		public Reg_instructionContext reg_instruction() {
			return getRuleContext(Reg_instructionContext.class,0);
		}
		public Mem_instructionContext mem_instruction() {
			return getRuleContext(Mem_instructionContext.class,0);
		}
		public Reg_or_mem_instructionContext reg_or_mem_instruction() {
			return getRuleContext(Reg_or_mem_instructionContext.class,0);
		}
		public Reg_mem_instructionContext reg_mem_instruction() {
			return getRuleContext(Reg_mem_instructionContext.class,0);
		}
		public Reg_mem_or_reg_reg_instructionContext reg_mem_or_reg_reg_instruction() {
			return getRuleContext(Reg_mem_or_reg_reg_instructionContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXIT:
			case RET:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				no_params_instruction();
				}
				break;
			case SIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				reg_instruction();
				}
				break;
			case JUMP:
			case JG:
			case JL:
			case JE:
			case JZ:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				mem_instruction();
				}
				break;
			case PUSH:
			case OUT:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				reg_or_mem_instruction();
				}
				break;
			case LOAD:
			case ST:
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				reg_mem_instruction();
				}
				break;
			case ADD:
			case SUB:
			case MUL:
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				reg_mem_or_reg_reg_instruction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class No_params_instructionContext extends ParserRuleContext {
		public No_params_op_codeContext no_params_op_code() {
			return getRuleContext(No_params_op_codeContext.class,0);
		}
		public No_params_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_no_params_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterNo_params_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitNo_params_instruction(this);
		}
	}

	public final No_params_instructionContext no_params_instruction() throws RecognitionException {
		No_params_instructionContext _localctx = new No_params_instructionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_no_params_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			no_params_op_code();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Reg_mem_or_reg_reg_instructionContext extends ParserRuleContext {
		public Reg_mem_or_reg_reg_op_codeContext reg_mem_or_reg_reg_op_code() {
			return getRuleContext(Reg_mem_or_reg_reg_op_codeContext.class,0);
		}
		public List<RegContext> reg() {
			return getRuleContexts(RegContext.class);
		}
		public RegContext reg(int i) {
			return getRuleContext(RegContext.class,i);
		}
		public MemContext mem() {
			return getRuleContext(MemContext.class,0);
		}
		public Reg_mem_or_reg_reg_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reg_mem_or_reg_reg_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterReg_mem_or_reg_reg_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitReg_mem_or_reg_reg_instruction(this);
		}
	}

	public final Reg_mem_or_reg_reg_instructionContext reg_mem_or_reg_reg_instruction() throws RecognitionException {
		Reg_mem_or_reg_reg_instructionContext _localctx = new Reg_mem_or_reg_reg_instructionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_reg_mem_or_reg_reg_instruction);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				reg_mem_or_reg_reg_op_code();
				setState(98);
				reg();
				setState(99);
				match(T__0);
				setState(100);
				mem();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				reg_mem_or_reg_reg_op_code();
				setState(103);
				reg();
				setState(104);
				match(T__0);
				setState(105);
				reg();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Reg_mem_instructionContext extends ParserRuleContext {
		public Reg_mem_op_codeContext reg_mem_op_code() {
			return getRuleContext(Reg_mem_op_codeContext.class,0);
		}
		public RegContext reg() {
			return getRuleContext(RegContext.class,0);
		}
		public MemContext mem() {
			return getRuleContext(MemContext.class,0);
		}
		public Reg_mem_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reg_mem_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterReg_mem_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitReg_mem_instruction(this);
		}
	}

	public final Reg_mem_instructionContext reg_mem_instruction() throws RecognitionException {
		Reg_mem_instructionContext _localctx = new Reg_mem_instructionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_reg_mem_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			reg_mem_op_code();
			setState(110);
			reg();
			setState(111);
			match(T__0);
			setState(112);
			mem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Reg_or_mem_instructionContext extends ParserRuleContext {
		public Reg_or_mem_op_codeContext reg_or_mem_op_code() {
			return getRuleContext(Reg_or_mem_op_codeContext.class,0);
		}
		public MemContext mem() {
			return getRuleContext(MemContext.class,0);
		}
		public RegContext reg() {
			return getRuleContext(RegContext.class,0);
		}
		public Reg_or_mem_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reg_or_mem_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterReg_or_mem_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitReg_or_mem_instruction(this);
		}
	}

	public final Reg_or_mem_instructionContext reg_or_mem_instruction() throws RecognitionException {
		Reg_or_mem_instructionContext _localctx = new Reg_or_mem_instructionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_reg_or_mem_instruction);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				reg_or_mem_op_code();
				setState(115);
				mem();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				reg_or_mem_op_code();
				setState(118);
				reg();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Reg_instructionContext extends ParserRuleContext {
		public Reg_op_codeContext reg_op_code() {
			return getRuleContext(Reg_op_codeContext.class,0);
		}
		public RegContext reg() {
			return getRuleContext(RegContext.class,0);
		}
		public Reg_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reg_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterReg_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitReg_instruction(this);
		}
	}

	public final Reg_instructionContext reg_instruction() throws RecognitionException {
		Reg_instructionContext _localctx = new Reg_instructionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_reg_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			reg_op_code();
			setState(123);
			reg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mem_instructionContext extends ParserRuleContext {
		public Mem_op_codeContext mem_op_code() {
			return getRuleContext(Mem_op_codeContext.class,0);
		}
		public MemContext mem() {
			return getRuleContext(MemContext.class,0);
		}
		public Mem_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mem_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterMem_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitMem_instruction(this);
		}
	}

	public final Mem_instructionContext mem_instruction() throws RecognitionException {
		Mem_instructionContext _localctx = new Mem_instructionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mem_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			mem_op_code();
			setState(126);
			mem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Const_declarationContext const_declaration() {
			return getRuleContext(Const_declarationContext.class,0);
		}
		public Space_declarationContext space_declaration() {
			return getRuleContext(Space_declarationContext.class,0);
		}
		public String_declarationContext string_declaration() {
			return getRuleContext(String_declarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declaration);
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				const_declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				space_declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				string_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_declarationContext extends ParserRuleContext {
		public TerminalNode DC() { return getToken(PseudoAssemblerParser.DC, 0); }
		public TerminalNode BYTE_TYPE() { return getToken(PseudoAssemblerParser.BYTE_TYPE, 0); }
		public Byte_valContext byte_val() {
			return getRuleContext(Byte_valContext.class,0);
		}
		public TerminalNode INT() { return getToken(PseudoAssemblerParser.INT, 0); }
		public TerminalNode INT_TYPE() { return getToken(PseudoAssemblerParser.INT_TYPE, 0); }
		public Int_valContext int_val() {
			return getRuleContext(Int_valContext.class,0);
		}
		public TerminalNode FLOAT_TYPE() { return getToken(PseudoAssemblerParser.FLOAT_TYPE, 0); }
		public Float_valContext float_val() {
			return getRuleContext(Float_valContext.class,0);
		}
		public TerminalNode CHAR_TYPE() { return getToken(PseudoAssemblerParser.CHAR_TYPE, 0); }
		public TerminalNode CHAR() { return getToken(PseudoAssemblerParser.CHAR, 0); }
		public Const_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).enterConst_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseudoAssemblerListener ) ((PseudoAssemblerListener)listener).exitConst_declaration(this);
		}
	}

	public final Const_declarationContext const_declaration() throws RecognitionException {
		Const_declarationContext _localctx = new Const_declarationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_const_declaration);
		int _la;
		try {
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(DC);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(134);
					match(INT);
					setState(135);
					match(T__1);
					}
				}

				setState(138);
				match(BYTE_TYPE);
				setState(139);
				match(T__2);
				setState(140);
				byte_val();
				setState(141);
				match(T__3);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				match(DC);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(144);
					match(INT);
					setState(145);
					match(T__1);
					}
				}

				setState(148);
				match(INT_TYPE);
				setState(149);
				match(T__2);
				setState(150);
				int_val();
				setState(151);
				match(T__3);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				match(DC);
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(154);
					match(INT);
					setState(155);
					match(T__1);
					}
				}

				setState(158);
				match(FLOAT_TYPE);
				setState(159);
				match(T__2);
				setState(160);
				float_val();
				setState(161);
				match(T__3);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(163);
				match(DC);
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(164);
					match(INT);
					setState(165);
					match(T__1);
					}
				}
